# CImguiNodeEditor

./: .gitignore  .gitmodules  CMakeLists.txt  cimgui_node_editor.cpp  cimgui_node_editor.h  cpp_to_c.h  definitions.json  extra.cpp  generate.rsp  structs_and_enums.json
CppToC/: .gitignore  CppToC.sln
CppToC/CppToC/: Builder.cs  CTypeTranslator.cs  CUtil.cs  ClangTypeUtil.cs  CppToC.csproj  CursorVisitor.cs  DeclVisitor.cs  ICursorVisitor.cs  IMethodOwner.cs  InstantiatedTemplateRecordMethodOwner.cs  OverloadUtil.cs  Program.cs  RecordMethodOwner.cs  RecordVisitor.cs  StmtVisitor.cs  TemplateInstantiationVisitor.cs
CppToC/CppToC/Generators/: CHeaderGenerator.cs  CImguiStructsAndEnumsGenerator.cs  CSourceGenerator.cs  CimguiDefinitionsGenerator.cs
CppToC/CppToC/Model/: EnumData.cs  FieldData.cs  ForwardDeclaredRecordData.cs  FunctionData.cs  ParameterData.cs  RecordData.cs  TemplateRecordData.cs  TypeRef.cs
